--- a/28.11.2022.md
+++ b/28.11.2022.md
@@ -95,7 +95,7 @@ ORDER BY orders.id;
 <img src=https://github.com/gorkemacir/etiyaAkademi2/blob/main/query%20%C3%A7%C4%B1kt%C4%B1lar%C4%B1/right%20join.png />
 
 ## Left Join
-- Siparişin tarih bilgisi listelendi.
+- Siparişlerin tarih bilgisi listelendi.
 ```
 SELECT payments.payment_date, orders.id
 FROM payments
